cleanup and add group v1
